--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,87 +1,80 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
 @import "reset";
 
-
-
-body {
-  line-height: 1;
-  background: white;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:after,
-blockquote:before,
-q:after,
-q:before {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-}
-
-h1 {
-  font-weight: 100;
-  font-size: 50px;
-}
-
-.home {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  .Aligner {
-    min-height: 100vh;
-    display: -ms-flexbox;
+header {
     display: flex;
-    -ms-flex-align: center;
     align-items: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
-  img {
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-  }
-  .Aligner-item {
-    max-width: 50%;
-  }
-  .menu ul li {
-    padding: 10px 15px;
-    display: inline-block;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-  }
-  .version-num {
-    background: #E8E8E8;
-    border-radius: 4px;
-    padding: 7px 15px;
-    display: inline-block;
-    font-size: 12px;
-    margin: 10px 0 20px;
-  }
-  a {
-    text-decoration: none;
-    color: #30395C;
-    transition: all 0.3s ease-in-out;
-  }
-  a:hover {
-    color: #43D4D6;
-  }
+    padding: 20px 0;
+
+    .logo {
+        font-size: 2rem;
+        width: 5%;
+    }
+
+    .brand {
+        font-size: 2rem;
+        width: 5%;
+        margin-left: 15px;
+        font-weight: 600;
+
+    }
+
+    input {
+        margin-left: 35px;
+        padding: 15px;
+        width: 40%;
+        background-color: rgba(223, 219, 219, 0.588);
+        border: none;
+        font-weight: 700;
+        font-size: 1rem;
+    }
+
+    .menu {
+        display: flex;
+        justify-content: flex-end;
+        margin-left: 40%;
+        width: 40%;
+
+
+
+        ul {
+
+            font-size: 1.1rem;
+            border-right: 1px solid rgba(170, 170, 170, 0.1);
+
+            li {
+
+
+                a {
+                    font-weight: 600;
+                    margin-right: 20px;
+                    text-decoration: none;
+                    color: gray;
+                    text-transform: capitalize;
+
+                    &:focus {
+                        color: black;
+                    }
+
+                    &:hover {
+                        color: black;
+                    }
+                }
+
+            }
+        }
+
+
+    }
+
+    .login {
+        display: flex;
+        justify-content: center;
+        width: 10%;
+        font-size: 1.1rem;
+        text-transform: capitalize;
+        cursor: pointer;
+        font-weight: 600;
+        color: gray;
+    }
 }
