--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -290,9 +290,47 @@ header {
         width: 30%;
         margin: 0 15px;
 
+
+
         .festival-img {
+            .bg-block1 {
+                background: red;
+                width: 300px;
+                height: 200px;
+                position: absolute;
+                top: 10px;
+                left: 459px;
+                transform: rotate(1deg);
+                z-index: 1;
+            }
+
+            .bg-block2 {
+                background: blue;
+                width: 300px;
+                height: 200px;
+                position: absolute;
+                top: 10px;
+                left: 808px;
+                transform: rotate(1deg);
+                z-index: 1;
+            }
+
+            .bg-block3 {
+                background: orange;
+                width: 300px;
+                height: 200px;
+                position: absolute;
+                top: 10px;
+                left: 1156px;
+                transform: rotate(1deg);
+                z-index: 1;
+            }
+
+
 
             img {
+                position: relative;
+                z-index: 2;
                 width: 320px;
                 height: 200px;
             }
