--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -287,9 +287,7 @@ header {
     .festival {
         display: inline-block;
         width: 30%;
-        margin: 0 15px;
-
-
+        margin: 50px 15px;
 
         .festival-img {
             .bg-block1 {
@@ -402,5 +400,67 @@ header {
 
         }
 
+    }
+
+    .show-more {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 180px;
+        height: 50px;
+        background: rgb(245, 244, 244);
+        color: rgb(168, 168, 168);
+        margin: 70px auto;
+        border-radius: 5px;
+        text-transform: capitalize;
+        font-weight: 600;
+
+        &:hover {
+            background: rgb(230, 227, 227);
+        }
+
+    }
+
+    .past-festivals {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        font-size: 1rem;
+        font-weight: 600;
+        text-transform: capitalize;
+        color: rgb(180, 178, 178);
+        cursor: pointer;
+
+
+        span {
+            &:hover {
+                color: rgb(201, 197, 197);
+            }
+        }
+
+        .fas {
+            margin-right: 15px;
+            font-size: 1rem;
+
+            &:hover {
+                color: rgb(201, 197, 197);
+            }
+        }
+    }
+
+    .rainbow-bar {
+        width: 100%;
+        height: 10px;
+        background: red;
+        /* For browsers that do not support gradients */
+        background: -webkit-linear-gradient(left, orange, yellow, green, cyan, blue, violet);
+        /* For Safari 5.1 to 6.0 */
+        background: -o-linear-gradient(right, orange, yellow, green, cyan, blue, violet);
+        /* For Opera 11.1 to 12.0 */
+        background: -moz-linear-gradient(right, orange, yellow, green, cyan, blue, violet);
+        /* For Firefox 3.6 to 15 */
+        background: linear-gradient(to right, orange, yellow, green, cyan, blue, violet);
+        /* Standard syntax (must be last) */
+        margin: 100px 0;
     }
 }
