--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -464,3 +464,127 @@ header {
         margin: 100px 0;
     }
 }
+
+#festival-info {
+
+    .container {
+        border-bottom: 1px solid rgb(182, 177, 177);
+        padding: 50px 0;
+    }
+
+    .info {
+        display: inline-block;
+        margin: 0 80px 0 0;
+        width: 15%;
+
+        .artists,
+        .countries,
+        .genres {
+            h3 {
+                font-size: 1.5rem;
+                font-weight: 600;
+            }
+
+            ul {
+                margin: 10px 0;
+
+                li {
+                    padding: 8px 0;
+
+                    a {
+                        color: rgb(172, 171, 171);
+                        text-decoration: none;
+                        font-size: 1.1rem;
+                        text-transform: capitalize;
+
+                    }
+                }
+            }
+        }
+
+        .venues {
+            position: relative;
+            top: -51px;
+
+            h3 {
+
+                font-size: 1.5rem;
+                font-weight: 600;
+            }
+
+            ul {
+
+                li {
+                    padding: 8px 0;
+
+                    a {
+                        color: rgb(172, 171, 171);
+                        text-decoration: none;
+                        font-size: 1.1rem;
+                        text-transform: capitalize;
+
+                    }
+                }
+            }
+        }
+
+        .activities {
+            h3 {
+                font-size: 1.5rem;
+                font-weight: 600;
+            }
+
+            ul {
+
+
+                li {
+                    padding: 8px 0;
+
+                    a {
+                        color: rgb(172, 171, 171);
+                        text-decoration: none;
+                        font-size: 1.1rem;
+                        text-transform: capitalize;
+
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+#popular-festivals {
+    margin: 50px 0;
+
+    .container {
+        border-bottom: 1px solid rgb(182, 177, 177);
+        padding-bottom: 30px;
+    }
+
+    h3 {
+        margin: 22px 0;
+        font-size: 1.6rem;
+        font-weight: 600;
+    }
+
+    .festival {
+        width: 24.7%;
+        display: inline-block;
+        text-align: center;
+
+
+        ul {
+            text-align: center;
+            float: left;
+
+            li {
+                text-align: left;
+                font-size: 1.1rem;
+                font-weight: 600;
+                color: gray;
+                margin-bottom: 15px;
+            }
+        }
+    }
+}
