--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,6 +17,7 @@ header {
     .logo {
         font-size: 2rem;
         width: 3.5%;
+        cursor: pointer;
 
         img {
             display: flex;
@@ -35,6 +36,11 @@ header {
         margin: 0 20px;
         font-weight: 600;
         letter-spacing: -3px;
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
 
     }
 
@@ -128,6 +134,7 @@ header {
         width: 3.5%;
         display: flex;
         justify-content: center;
+        cursor: pointer;
 
 
         .login-circle {
@@ -248,18 +255,25 @@ header {
             li {
                 padding: 0 10px;
 
+                &:last-child {
+                    .filter-circle {
+                        width: 110px;
+                    }
+                }
+
                 .filter-circle {
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     width: 90px;
-                    height: 50px;
-                    border-radius: 45%;
+                    height: 40px;
+                    border-radius: 22px;
                     color: darkgray;
                     text-align: center;
                     background: rgba(250, 243, 243, 0.753);
-                    font-size: 1.1rem;
+                    font-size: 1rem;
                     font-weight: 600;
+                    cursor: pointer;
 
 
 
@@ -290,6 +304,8 @@ header {
         margin: 50px 15px;
 
         .festival-img {
+            cursor: pointer;
+
             .bg-block1 {
                 background: red;
                 width: 300px;
@@ -380,7 +396,7 @@ header {
                 display: inline-block;
                 margin-left: 110px;
                 color: red;
-
+                cursor: pointer;
 
                 .fas {
                     position: relative;
@@ -584,6 +600,8 @@ header {
                 font-weight: 600;
                 color: gray;
                 margin-bottom: 15px;
+                cursor: pointer;
+                color: rgb(172, 171, 171);
             }
         }
     }
